# mkdocs

./: .pre-commit-config.yaml  404.html  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  REPO_REVIEW_2026-04.md  SECURITY.md  hatch_build.py  index.html  mkdocs.yml  noxfile.py  pyproject.toml  setup.py  sitemap.xml
.agents/skills/generate-release-note/: SKILL.md
.agents/skills/generate-release-note/agents/: openai.yaml
.agents/skills/generate-release-note/scripts/: insert_release_note.py
.agents/skills/release/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/scripts/: sync_release_draft.py
.github/workflows/: autofix.yml  ci.yml  docs.yml  labeler.yml  release-drafter.yml  release.yml  security.yml
about/contributing/: index.html
about/license/: index.html
about/release-notes/: index.html
dev-guide/: index.html
dev-guide/api/: index.html
dev-guide/plugins/: index.html
dev-guide/themes/: index.html
dev-guide/translations/: index.html
docs/: CNAME  getting-started.md  hooks.py  index.md
docs/about/: release-notes.md
docs/dev-guide/: plugins.md  themes.md  translations.md
docs/img/: plugin-events.py
docs/user-guide/: choosing-your-theme.md  configuration.md  customizing-your-theme.md  deploying-your-docs.md  installation.md  writing-your-docs.md
getting-started/: index.html
mkdocs/: __init__.py  __main__.py  exceptions.py  localization.py  plugins.py  theme.py
mkdocs/commands/: build.py  gh_deploy.py  new.py  serve.py
mkdocs/config/: base.py  config_options.py  defaults.py
mkdocs/contrib/search/: __init__.py  search_index.py
mkdocs/livereload/: __init__.py
mkdocs/structure/: __init__.py  files.py  nav.py  pages.py  toc.py
mkdocs/tests/: __init__.py  base.py  build_tests.py  cli_tests.py  docs_hooks_tests.py  gh_deploy_tests.py  integration.py  livereload_tests.py  localization_tests.py  plugin_tests.py  search_tests.py  serve_tests.py  theme_tests.py
mkdocs/tests/config/: base_tests.py  config_options_legacy_tests.py  config_options_tests.py  config_tests.py
mkdocs/tests/integration/: projects.yaml
mkdocs/tests/integration/complicated_config/: mkdocs.yml
mkdocs/tests/integration/complicated_config/documentation/: index.md
mkdocs/tests/structure/: file_tests.py  nav_tests.py  page_tests.py  toc_tests.py
mkdocs/tests/utils/: templates_tests.py  utils_tests.py
mkdocs/themes/mkdocs/: base.html  messages.pot
mkdocs/themes/mkdocs/css/: base.css
mkdocs/themes/mkdocs/locales/de/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/es/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/fa/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/fr/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/id/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/it/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/ja/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/nb/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/nl/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/nn/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/pl/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/pt_BR/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/ru/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/tr/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/uk/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/zh_CN/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/zh_TW/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/: footer.html  messages.pot
mkdocs/themes/readthedocs/css/: theme_extra.css
mkdocs/themes/readthedocs/js/: theme_extra.js
mkdocs/themes/readthedocs/locales/de/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/es/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/fa/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/fr/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/id/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/it/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/ja/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/nl/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/pl/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/pt_BR/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/ru/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/tr/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/uk/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/zh_CN/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/zh_TW/LC_MESSAGES/: messages.po
mkdocs/utils/: __init__.py  cache.py  meta.py  rendering.py  templates.py  yaml.py
requirements/: requirements-docs.txt  requirements-style.txt
scripts/: install_min_versions.py
search/: search_index.json
user-guide/: index.html
user-guide/choosing-your-theme/: index.html
user-guide/cli/: index.html
user-guide/configuration/: index.html
user-guide/custom-themes/: index.html
user-guide/customizing-your-theme/: index.html
user-guide/deploying-your-docs/: index.html
user-guide/installation/: index.html
user-guide/localizing-your-theme/: index.html
user-guide/plugins/: index.html
user-guide/styling-your-docs/: index.html
user-guide/writing-your-docs/: index.html
